blog page design and developed

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,4 @@
-REDIS_URL=
-NEXT_PUBLIC_AUTH0_CLIENT_ID=
-NEXT_PUBLIC_AUTH0_DOMAIN=
-NEXT_PUBLIC_AUTH0_ADMIN_EMAIL=
+REDIS_URL="redis-cli --tls -u redis://default:757f3feeac6a4ce29e34627fb03cb3a6@apn1-simple-redbird-33593.upstash.io:33593"
+NEXT_PUBLIC_AUTH0_CLIENT_ID="y48dDEchZNdjnOUtg9d88HNvGFjQlj6D"
+NEXT_PUBLIC_AUTH0_DOMAIN="dev-gdqob2bstqzlhuwx.us.auth0.com"
+NEXT_PUBLIC_AUTH0_ADMIN_EMAIL="subhan.akram2400@gmail.com"
