--- a/package.json
+++ b/package.json
@@ -7,17 +7,29 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.12.0",
+    "@contentful/rich-text-react-renderer": "^15.16.2",
     "@tailwindcss/typography": "^0.5.7",
+    "@upstash/redis": "^1.18.5",
+    "contentful": "^9.2.14",
     "date-fns": "^2.29.3",
+    "fs": "^0.0.1-security",
     "gray-matter": "4.0.3",
+    "i": "^0.3.7",
+    "install": "^0.13.0",
     "ioredis": "^5.2.4",
     "nanoid": "^4.0.0",
     "next": "latest",
+    "npm": "^9.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-faq-component": "^1.3.4",
+    "react-icons": "^4.7.1",
+    "react-text-typist": "^1.1.6",
+    "react-ts-typewriter": "^0.1.8-b",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.5",
