--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.12.0",
+    "@chakra-ui/react": "1.8.6",
     "@contentful/rich-text-react-renderer": "^15.16.2",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@react-google-maps/api": "2.7.0",
     "@tailwindcss/typography": "^0.5.7",
     "@upstash/redis": "^1.18.5",
     "contentful": "^9.2.14",
     "date-fns": "^2.29.3",
+    "framer-motion": "^8.2.4",
     "fs": "^0.0.1-security",
     "gray-matter": "4.0.3",
     "i": "^0.3.7",
