--- a/package.json
+++ b/package.json
@@ -11,19 +11,29 @@
     "@contentful/rich-text-react-renderer": "^15.16.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mailchimp/mailchimp_marketing": "^3.0.80",
     "@react-google-maps/api": "2.7.0",
     "@tailwindcss/typography": "^0.5.7",
     "@upstash/redis": "^1.18.5",
+    "axios": "^1.2.2",
     "contentful": "^9.2.14",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.3",
+    "express": "^4.18.2",
     "framer-motion": "^8.2.4",
     "fs": "^0.0.1-security",
     "gray-matter": "4.0.3",
     "i": "^0.3.7",
     "install": "^0.13.0",
     "ioredis": "^5.2.4",
+    "isomorphic-unfetch": "^4.0.2",
+    "mailchimp": "^1.2.1",
+    "mailchimp-api-v3": "^1.15.0",
     "nanoid": "^4.0.0",
+    "net": "^1.0.2",
     "next": "latest",
+    "nextjs-cors": "^2.1.2",
+    "node-fetch": "^3.3.0",
     "npm": "^9.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
