--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "node-fetch": "^3.3.0",
     "npm": "^9.2.0",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-faq-component": "^1.3.4",
     "react-icons": "^4.7.1",
