--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nanoid": "^4.0.0",
     "net": "^1.0.2",
     "next": "latest",
+    "next-seo": "^5.15.0",
     "nextjs-cors": "^2.1.2",
     "node-fetch": "^3.3.0",
     "npm": "^9.2.0",
