--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start"
   },
   "dependencies": {
@@ -33,6 +34,7 @@
     "net": "^1.0.2",
     "next": "latest",
     "next-seo": "^5.15.0",
+    "next-sitemap": "^3.1.45",
     "nextjs-cors": "^2.1.2",
     "node-fetch": "^3.3.0",
     "npm": "^9.2.0",
