--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "sitemap":"next-sitemap --config next-sitemap.config.js",
+    "export":"next build && next export"
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.12.0",
